<?xml version="1.0" encoding="utf-8"?><!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/overview" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Quantity field -->
                <EditText
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:id="@+id/product_quantity"
                    android:hint="@string/hint_product_quantity"
                    android:inputType="number"
                    style="@style/EditorFieldStyle" />
                <Button
                    android:id="@+id/increase_quantity"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginRight="8dp"
                    android:text="+"
                    android:background="@color/colorChoosePhoto"/>
                <Button
                    android:id="@+id/decrease_quantity"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="-"
                    android:background="@color/colorChoosePhoto"/>
            </LinearLayout>


            <!-- Price field -->
            <EditText
                android:id="@+id/product_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_price"
                android:inputType="number" />
        </LinearLayout>
    </LinearLayout>

    <!-- Image category -->
    <LinearLayout
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/image" />

        <!-- Image field -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <!-- Image product -->
            <ImageView
                android:id="@+id/product_image"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:src="@drawable/no_image" />

            <Button
                android:id="@+id/choose_photo"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:background="@color/colorChoosePhoto"
                android:focusable="false"
                android:text="@string/choose_photo"
                android:textAppearance="?android:textAppearanceSmall" />


        </LinearLayout>
    </LinearLayout>

    <!-- Measurement category -->
    <LinearLayout
        android:id="@+id/supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/supplier" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Supplier field -->
            <EditText
                android:id="@+id/product_supplier"
                style="@style/EditorFieldStyle"
                android:hint="@string/supplier"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/product_email"
                style="@style/EditorFieldStyle"
                android:hint="@string/supplier_email"
                android:inputType="textEmailAddress" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/order"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/order"
        android:layout_gravity="center"/>
</LinearLayout>
